--- a/trunk/adhoc-core/conf/storm.yaml
+++ b/trunk/adhoc-core/conf/storm.yaml
@@ -48,19 +48,41 @@
     - 6601
  #----启动的shard的数，每个shard为一个solr实例，结合cpu个数和内存进行配置，10台48G内存配置60----
  higo.shards.count: 60
+ #----创建索引生成的每个shard的并行----
+ higo.index.parallel: 5
+ higo.index.parallel.r_rpt_cps_luna_item: 10
+ 
+ #----基于冗余的ha,设置为1表示没有冗余，如果设置为2，则冗余号位0,1----
+ higo.shards.replication: 1
  #----固定分配task----
  higo.fixed.shards: 10
- higo.fixed.shards.1: "tiansuan1.kgb.cm4:0,1,2,3,4"
- higo.fixed.shards.2: "tiansuan2.kgb.cm4:5,6,7,8,9"
- higo.fixed.shards.3: "adhoc2.kgb.cm6:10,11,12,13,14"
- higo.fixed.shards.4: "adhoc3.kgb.cm6:15,16,17,18,19"
- higo.fixed.shards.5: "adhoc4.kgb.cm6:20,21,22,23,24"
- higo.fixed.shards.6: "adhoc5.kgb.cm6:25,26,27,28,29,30"
- higo.fixed.shards.7: "adhoc6.kgb.cm6:31,32,33,34,35,36"
- higo.fixed.shards.8: "adhoc7.kgb.cm6:37,38,39,40,41"
- higo.fixed.shards.9: "adhoc8.kgb.cm6:42,43,44,45,46,47"
- higo.fixed.shards.10: "adhoc1.kgb.cm6:48,49,50,51,52,53"
- #higo.fixed.shards.11: "adhocbak.kgb.cm6:54,55,56,57,58,59"
+ #------格式 冗余号:域名:分配的任务序号----
+ higo.fixed.shards.1: "0:tiansuan1.kgb.cm4:0,1,2,3,4"
+ higo.fixed.shards.2: "0:tiansuan2.kgb.cm4:5,6,7,8,9"
+ higo.fixed.shards.3: "0:adhoc2.kgb.cm6:10,11,12,13,14"
+ higo.fixed.shards.4: "0:adhoc3.kgb.cm6:15,16,17,18,19"
+ higo.fixed.shards.5: "0:adhoc4.kgb.cm6:20,21,22,23,24"
+ higo.fixed.shards.6: "0:adhoc5.kgb.cm6:25,26,27,28,29,30"
+ higo.fixed.shards.7: "0:adhoc6.kgb.cm6:31,32,33,34,35,36"
+ higo.fixed.shards.8: "0:adhoc7.kgb.cm6:37,38,39,40,41"
+ higo.fixed.shards.9: "0:adhoc8.kgb.cm6:42,43,44,45,46,47"
+ higo.fixed.shards.10: "0:adhoc1.kgb.cm6:48,49,50,51,52,53"
+ 
+ #----剩余的shard没有配置，会均匀的分配到剩余的机器上----
+ #higo.fixed.shards.11: "0:adhocbak.kgb.cm6:54,55,56,57,58,59"
+ 
+ #----如果higo.shards.replication: 2，higo.shards.count: 30的额外配置参考----
+ #higo.fixed.shards.1: "0:tiansuan1.kgb.cm4:0,1,2,3,4"
+ #higo.fixed.shards.2: "0:tiansuan2.kgb.cm4:5,6,7,8,9"
+ #higo.fixed.shards.3: "0:adhoc2.kgb.cm6:10,11,12,13,14"
+ #higo.fixed.shards.4: "0:adhoc3.kgb.cm6:15,16,17,18,19"
+ #higo.fixed.shards.5: "0:adhoc4.kgb.cm6:20,21,22,23,24"
+ #higo.fixed.shards.6: "0:adhoc5.kgb.cm6:25,26,27,28,29,30"
+ #higo.fixed.shards.7: "1:adhoc6.kgb.cm6:1,2,3,4,5,6"
+ #higo.fixed.shards.8: "1:adhoc7.kgb.cm6:7,8,9,10,11"
+ #higo.fixed.shards.9: "1:adhoc8.kgb.cm6:12,13,14,15,16,17"
+ #higo.fixed.shards.10: "1:adhoc1.kgb.cm6:18,19,20,21,22,23"
+ #higo.fixed.shards.11: "1:adhocbak.kgb.cm6:24,25,26,27,28,29,0"
 
  #----分配给merger server的端口，建议每台机器分配一个merger server----
  higo.merge.ports: "6601,6602,6603,6604,6605,6606,6607,6608,6609,6610"
@@ -79,13 +101,15 @@
  #----个别的worker的端口的jvm参数配置，通常用于给merger server单独配置----
  worker.childopts.6601: "-Xms5g -Xmx5g -Xmn2g -XX:SurvivorRatio=3 -XX:PermSize=96m -XX:MaxPermSize=256m -XX:+UseParallelGC -XX:ParallelGCThreads=16 -XX:+UseAdaptiveSizePolicy -XX:+PrintGCDetails -XX:+PrintGCTimeStamps  -Xloggc:%storm.home%/logs/gc-%port%.log "
  #----mdrill的表格列表在hdfs下的路径-----
- higo.table.path: "/group/taobao/external/p4p/p4padhoc/tablelist"
+ higo.table.path: "/group/tbdp-etao-adhoc/p4padhoc/tablelist"
  #----mdrill中启动的solr使用的初始端口号-----
  higo.solr.ports.begin: 51110
  #----mdrill分区方式，目前支持default,day,month,single，default是将一个月分成3个区,single意味着没有分区-----
  higo.partion.type: "default"
  #----mdrill个别表的分区设定，这里为rpt_seller_all_m表----
  higo.partion.type.rpt_seller_all_m: "month"
+ higo.partion.type.r_rpt_cps_luna_item: "default"
+ higo.partion.type.r_rpt_cps_adhoc_seller: "default"
  higo.partion.type.rpt_seller_all_m_single: "single"
  higo.partion.type.rpt_seller_all_m_dir: "dir@thedate"
 
@@ -93,4 +117,4 @@
  higo.download.offline.conn: "jdbc:mysql://tiansuan1.kgb.cm4:3306/adhoc_download?useUnicode=true&characterEncoding=utf8"
  higo.download.offline.username: "adhoc"
  higo.download.offline.passwd: "adhoc"
- higo.download.offline.store: "/group/taobao/external/p4p/p4padhoc/download/offline"
+ higo.download.offline.store: "/group/tbdp-etao-adhoc/p4padhoc/download/offline"
