--- a/trunk/adhoc-solr/pom.xml
+++ b/trunk/adhoc-solr/pom.xml
@@ -63,7 +63,11 @@
 			<artifactId>adhoc-public</artifactId>
 			<version>0.18-beta</version>
 		</dependency>
-		
+		   <dependency>
+  <groupId>com.google.guava</groupId> 
+  <artifactId>guava</artifactId> 
+  <version>13.0.1</version>
+   </dependency>
 		
 	</dependencies>
 </project>
