--- a/trunk/adhoc-core/conf/storm.yaml
+++ b/trunk/adhoc-core/conf/storm.yaml
@@ -17,12 +17,12 @@
 ####蓝鲸各种心跳间隔配置####
  nimbus.task.timeout.secs: 30
  task.heartbeat.frequency.secs: 6
- nimbus.supervisor.timeout.secs: 120
- supervisor.heartbeat.frequency.secs: 10
+ nimbus.supervisor.timeout.secs: 300
+ supervisor.heartbeat.frequency.secs: 20
  nimbus.monitor.freq.secs: 60
- supervisor.worker.timeout.secs: 200
- supervisor.monitor.frequency.secs: 20
- worker.heartbeat.frequency.secs: 10
+ supervisor.worker.timeout.secs: 600
+ supervisor.monitor.frequency.secs: 90
+ worker.heartbeat.frequency.secs: 30
 # storm.zookeeper.session.timeout: 60000
 # storm.zookeeper.retry.interval: 6000
 # storm.zookeeper.retry.times: 10
@@ -60,106 +60,99 @@
  #----基于冗余的ha,设置为1表示没有冗余，如果设置为2，则冗余号位0,1----
  higo.shards.replication: 1
  #----固定分配task----
- higo.fixed.shards: 10
+ higo.fixed.shards: 11
  #------格式 冗余号:域名:分配的任务序号----
  higo.fixed.shards.1: "0:tiansuan1.kgb.cm4:0,1,2,3,4"
  higo.fixed.shards.2: "0:tiansuan2.kgb.cm4:5,6,7,8,9"
- higo.fixed.shards.3: "0:adhoc2.kgb.cm6:10,11,12,13,14,44"
- higo.fixed.shards.4: "0:adhoc3.kgb.cm6:15,16,17,18,19,45"
- higo.fixed.shards.5: "0:adhoc4.kgb.cm6:20,21,22,23,24,46"
+ higo.fixed.shards.3: "0:adhoc2.kgb.cm6:10,11,12,13,14"
+ higo.fixed.shards.4: "0:adhoc3.kgb.cm6:15,16,17,18,19"
+ higo.fixed.shards.5: "0:adhoc4.kgb.cm6:20,21,22,23,24"
  higo.fixed.shards.6: "0:adhoc5.kgb.cm6:25,26,27,28,29,30"
  higo.fixed.shards.7: "0:adhoc6.kgb.cm6:31,32,33,34,35,36"
- higo.fixed.shards.8: "0:adhoc7.kgb.cm6:37,38,39,40,41,42"
+ higo.fixed.shards.8: "0:adhoc7.kgb.cm6:37,38,39,40,41"
  higo.fixed.shards.9: "0:adhoc1.kgb.cm6:48,49,50,51,52,53"
- #higo.fixed.shards.9: "0:adhoc8.kgb.cm6:42,43,44,45,46,47"
- higo.fixed.shards.10: "0:adhocbak.kgb.cm6:54,55,56,57,58,59,47,43"
+ higo.fixed.shards.10: "0:adhoc8.kgb.cm6:42,43,44,45,46,47"
+ higo.fixed.shards.11: "0:adhocbak.kgb.cm6:54,55,56,57,58,59"
  
  #----binlog记录的位置，默认为local如果hdfs稳定可以写hdfs----
  higo.realtime.binlog: "local"
  
  #----从tt实时导入到mdrill----
- higo.mode.p4p_pv2: "@realtime@"
- higo.partion.type.p4p_pv2: "month"
- p4p_pv2-log: "p4p_pv2"
- p4p_pv2-subid: "1226132513ZWOWEH3B"
- p4p_pv2-accesskey: "2ac04eb8-b3a4-4fb3-ab89-e8a689501b37"
- p4p_pv2-parse: "com.alimama.quanjingmonitor.mdrillImport.parse.p4p_pv2"
- p4p_pv2-reader: "com.alimama.quanjingmonitor.mdrillImport.reader.TT4Reader"
- p4p_pv2-commitbatch: 1000
- p4p_pv2-commitbuffer: 1000
- p4p_pv2-spoutbuffer: 1000
- p4p_pv2-boltbuffer: 1000
- p4p_pv2-threads: 30
- p4p_pv2-mode: "merger"
- p4p_pv2-timeoutSpout: 90
- p4p_pv2-timeoutBolt: 30
- p4p_pv2-timeoutCommit: 300
+ higo.partion.type.rpt_quanjing_tanxclick: "default"
+ higo.partion.type.rpt_quanjing_tanxpv: "default"
+ higo.partion.type.s_ods_mm_adzones: "default"
+
+
  
- higo.mode.tanx_pv: "@realtime@"
- higo.partion.type.tanx_pv: "month"
+ higo.mode.tanx_pv: "@realtime@cleanPartions:99@"
+ higo.partion.type.tanx_pv: "day"
  tanx_pv-log: "tanx_pv"
  tanx_pv-subid: "01061423317TVV8KSN"
  tanx_pv-accesskey: "604a3330-5c1f-4488-9466-de63f08fe297"
  tanx_pv-parse: "com.alimama.quanjingmonitor.mdrillImport.parse.tanx_pv"
  tanx_pv-reader: "com.alimama.quanjingmonitor.mdrillImport.reader.TT4Reader"
- tanx_pv-commitbatch: 1000
- tanx_pv-commitbuffer: 1000
- tanx_pv-spoutbuffer: 1000
- tanx_pv-boltbuffer: 1000
- p4p_pv2-threads: 60
+ tanx_pv-commitbatch: 200
+ tanx_pv-commitbuffer: 2000
+ tanx_pv-spoutbuffer: 3000
+ tanx_pv-boltbuffer: 500
+ tanx_pv-threads: 32
+ tanx_pv-threads_reduce: 12
  tanx_pv-mode: "merger"
- tanx_pv-timeoutSpout: 90
+ tanx_pv-timeoutSpout: 60
  tanx_pv-timeoutBolt: 30
- tanx_pv-timeoutCommit: 300
+ tanx_pv-timeoutCommit: 100
  
  
- higo.mode.tanx_click: "@realtime@"
- higo.partion.type.tanx_click: "month"
+ higo.mode.tanx_click: "@realtime@cleanPartions:99@"
+ higo.partion.type.tanx_click: "day"
  
  tanx_click_zhitou-log: "tanx_click_zhitou"
  tanx_click_zhitou-subid: "0106143856X2HG2CRT"
  tanx_click_zhitou-accesskey: "9f126ea7-e728-464f-92db-8fe03aed561a"
  tanx_click_zhitou-parse: "com.alimama.quanjingmonitor.mdrillImport.parse.tanx_click_zhitou"
  tanx_click_zhitou-reader: "com.alimama.quanjingmonitor.mdrillImport.reader.TT4Reader"
- tanx_click_zhitou-commitbatch: 500
- tanx_click_zhitou-commitbuffer: 500
+ tanx_click_zhitou-commitbatch: 200
+ tanx_click_zhitou-commitbuffer: 2000
  tanx_click_zhitou-spoutbuffer: 500
  tanx_click_zhitou-boltbuffer: 500
  tanx_click_zhitou-threads: 2
+ tanx_click_zhitou-threads_reduce: 12
  tanx_click_zhitou-mode: "merger"
- tanx_click_zhitou-timeoutSpout: 90
- tanx_click_zhitou-timeoutBolt: 60
- tanx_click_zhitou-timeoutCommit: 300
+ tanx_click_zhitou-timeoutSpout: 30
+ tanx_click_zhitou-timeoutBolt: 20
+ tanx_click_zhitou-timeoutCommit: 60
  
  tanx_click_rt-log: "tanx_rd_log"
  tanx_click_rt-subid: "0106144243FH80E8QP"
  tanx_click_rt-accesskey: "a53f9bb3-26c0-4ba8-9389-13057b9e5d34"
  tanx_click_rt-parse: "com.alimama.quanjingmonitor.mdrillImport.parse.tanx_click_rt"
  tanx_click_rt-reader: "com.alimama.quanjingmonitor.mdrillImport.reader.TT4Reader"
- tanx_click_rt-commitbatch: 500
- tanx_click_rt-commitbuffer: 500
+ tanx_click_rt-commitbatch: 200
+ tanx_click_rt-commitbuffer: 2000
  tanx_click_rt-spoutbuffer: 500
  tanx_click_rt-boltbuffer: 500
  tanx_click_rt-threads: 2
+ tanx_click_rt-threads_reduce: 12
  tanx_click_rt-mode: "merger"
- tanx_click_rt-timeoutSpout: 90
- tanx_click_rt-timeoutBolt: 60
- tanx_click_rt-timeoutCommit: 300
+ tanx_click_rt-timeoutSpout: 30
+ tanx_click_rt-timeoutBolt: 20
+ tanx_click_rt-timeoutCommit: 60
  
  tanx_user_rt-log: "user_rd"
  tanx_user_rt-subid: "0106144909UBGMF3IB"
  tanx_user_rt-accesskey: "91bb5ad9-dc37-49b1-be75-8e1de52e4407"
  tanx_user_rt-parse: "com.alimama.quanjingmonitor.mdrillImport.parse.tanx_user_rt"
  tanx_user_rt-reader: "com.alimama.quanjingmonitor.mdrillImport.reader.TT4Reader"
- tanx_user_rt-commitbatch: 500
- tanx_user_rt-commitbuffer: 500
+ tanx_user_rt-commitbatch: 200
+ tanx_user_rt-commitbuffer: 2000
  tanx_user_rt-spoutbuffer: 500
  tanx_user_rt-boltbuffer: 500
  tanx_user_rt-mode: "merger"
  tanx_user_rt-threads: 2
- tanx_user_rt-timeoutSpout: 90
- tanx_user_rt-timeoutBolt: 60
- tanx_user_rt-timeoutCommit: 300
+ tanx_user_rt-threads_reduce: 12
+ tanx_user_rt-timeoutSpout: 30
+ tanx_user_rt-timeoutBolt: 20
+ tanx_user_rt-timeoutCommit: 60
  
 
  
@@ -184,7 +177,7 @@
  #----分配给merger server的端口，建议每台机器分配一个merger server----
  higo.merge.ports: "6601,6602,6603,6604,6605,6606,6607,6608,6609,6610"
  #----启动的merger server的worker数量，建议根据机器数量设定----
- higo.mergeServer.count: 10
+ higo.mergeServer.count: 11
  #----分配给实时数据源的端口，该功能在开发中，预留接口----
  higo.realtime.ports: "6501,6502,6503,6504,6505,6506,6507,6508,6509,6510"
  #----启动实时数据源的worker数量,预留接口----
@@ -204,6 +197,7 @@
  #----mdrill个别表的分区设定，这里为rpt_seller_all_m表----
  higo.partion.type.rpt_seller_all_m: "month"
  higo.partion.type.r_rpt_cps_luna_item: "default"
+ higo.partion.type.fact_wirelesspv_clickcosteffect1_lbs_adhoc_d: "day"
  higo.partion.type.r_rpt_cps_adhoc_seller: "default"
  higo.partion.type.rpt_seller_all_m_single: "single"
  higo.partion.type.rpt_seller_all_m_dir: "dir@thedate"
@@ -230,6 +224,23 @@
  higo.mode.ods_allpv_ad_d: "@hdfs@fdt@sigment:15@blocksize:1073741824@iosortmb:256@igDataChange@" 
  higo.index.parallel.ods_allpv_ad_d: 40
  
+#
+ #higo.mode.p4p_pv2: "@realtime@"
+ #higo.partion.type.p4p_pv2: "month"
+ #p4p_pv2-log: "p4p_pv2"
+ #p4p_pv2-subid: "1226132513ZWOWEH3B"
+ #p4p_pv2-accesskey: "2ac04eb8-b3a4-4fb3-ab89-e8a689501b37"
+ #p4p_pv2-parse: "com.alimama.quanjingmonitor.mdrillImport.parse.p4p_pv2"
+ #p4p_pv2-reader: "com.alimama.quanjingmonitor.mdrillImport.reader.TT4Reader"
+ #p4p_pv2-commitbatch: 1000
+ #p4p_pv2-commitbuffer: 1000
+ #p4p_pv2-spoutbuffer: 5000
+ #p4p_pv2-boltbuffer: 1000
+ #p4p_pv2-threads: 11
+ #p4p_pv2-mode: "merger"
+ #p4p_pv2-timeoutSpout: 60
+# p4p_pv2-timeoutBolt: 30
+# p4p_pv2-timeoutCommit: 120
 
 ####以下为adhoc项目专用，跟mdrill无关，不启动UI的话可忽略####
  higo.ui.conf.dir: "/home/taobao/bluewhale/ui16/alimama/adhoc-core/webapp"
