--- a/trunk/adhoc-core/conf/storm.yaml
+++ b/trunk/adhoc-core/conf/storm.yaml
@@ -14,187 +14,84 @@
  hadoop.conf.dir: "/home/taobao/config"
  hadoop.java.opts: "-Xmx1536m"
  
-####蓝鲸各种心跳间隔配置####
- nimbus.task.timeout.secs: 30
- task.heartbeat.frequency.secs: 6
- nimbus.supervisor.timeout.secs: 300
- supervisor.heartbeat.frequency.secs: 20
- nimbus.monitor.freq.secs: 60
- supervisor.worker.timeout.secs: 600
- supervisor.monitor.frequency.secs: 90
- worker.heartbeat.frequency.secs: 30
-# storm.zookeeper.session.timeout: 60000
-# storm.zookeeper.retry.interval: 6000
-# storm.zookeeper.retry.times: 10
  
-####mdrill配置####
+ 
+ ####mdrill存储目录配置####
  higo.workdir.list: "/disk1/taobao/mdrill,/disk2/taobao/mdrill,/disk3/taobao/mdrill,/disk4/taobao/mdrill,/disk5/taobao/mdrill,/disk6/taobao/mdrill,/disk7/taobao/mdrill,/disk8/taobao/mdrill,/disk9/taobao/mdrill,/disk10/taobao/mdrill"
- #----每台机器启动的worker进程端口列表----
- supervisor.slots.ports:
-    - 6701
-    - 6702
-    - 6703
-    - 6704
-    - 6705
-    - 6706
-    - 6707
-    - 6708
-    - 6709
-    - 6710
-    - 6711
-    - 6712
-    - 6713
-    - 6714
-    - 6715
-    - 6716
-    - 6717
-    - 6718
-    - 6719
-    - 6601
- #----启动的shard的数，每个shard为一个solr实例，结合cpu个数和内存进行配置，10台48G内存配置60----
- higo.shards.count: 60
- #----创建索引生成的每个shard的并行----
- higo.index.parallel: 5
- higo.index.parallel.r_rpt_cps_luna_item: 10
- 
- #----基于冗余的ha,设置为1表示没有冗余，如果设置为2，则冗余号位0,1----
- higo.shards.replication: 1
- #----固定分配task----
- higo.fixed.shards: 11
- #------格式 冗余号:域名:分配的任务序号----
- higo.fixed.shards.1: "0:tiansuan1.kgb.cm4:0,1,2,3,4"
- higo.fixed.shards.2: "0:tiansuan2.kgb.cm4:5,6,7,8,9"
- higo.fixed.shards.3: "0:adhoc2.kgb.cm6:10,11,12,13,14"
- higo.fixed.shards.4: "0:adhoc3.kgb.cm6:15,16,17,18,19"
- higo.fixed.shards.5: "0:adhoc4.kgb.cm6:20,21,22,23,24"
- higo.fixed.shards.6: "0:adhoc5.kgb.cm6:25,26,27,28,29,30"
- higo.fixed.shards.7: "0:adhoc6.kgb.cm6:31,32,33,34,35,36"
- higo.fixed.shards.8: "0:adhoc7.kgb.cm6:37,38,39,40,41"
- higo.fixed.shards.9: "0:adhoc1.kgb.cm6:48,49,50,51,52,53"
- higo.fixed.shards.10: "0:adhoc8.kgb.cm6:42,43,44,45,46,47"
- higo.fixed.shards.11: "0:adhocbak.kgb.cm6:54,55,56,57,58,59"
- 
- #----binlog记录的位置，默认为local如果hdfs稳定可以写hdfs----
- higo.realtime.binlog: "local"
- 
- #----从tt实时导入到mdrill----
- higo.partion.type.rpt_quanjing_tanxclick: "default"
- higo.partion.type.rpt_quanjing_tanxpv: "default"
- higo.partion.type.s_ods_mm_adzones: "default"
- higo.mode.s_ods_mm_adzones: "@fieldcontains:status=A@" 
 
- 
- higo.mode.tanx_pv: "@realtime@cleanPartions:99@"
- higo.partion.type.tanx_pv: "day"
- tanx_pv-log: "tanx_pv"
- tanx_pv-subid: "01061423317TVV8KSN"
- tanx_pv-accesskey: "604a3330-5c1f-4488-9466-de63f08fe297"
- tanx_pv-parse: "com.alimama.quanjingmonitor.mdrillImport.parse.tanx_pv"
- tanx_pv-reader: "com.alimama.quanjingmonitor.mdrillImport.reader.TT4Reader"
- tanx_pv-commitbatch: 200
- tanx_pv-commitbuffer: 2000
- tanx_pv-spoutbuffer: 3000
- tanx_pv-boltbuffer: 500
- tanx_pv-threads: 32
- tanx_pv-threads_reduce: 12
- tanx_pv-mode: "merger"
- tanx_pv-timeoutSpout: 60
- tanx_pv-timeoutBolt: 30
- tanx_pv-timeoutCommit: 100
- 
- 
- higo.mode.tanx_click: "@realtime@cleanPartions:99@"
- higo.partion.type.tanx_click: "day"
- 
- tanx_click_zhitou-log: "tanx_click_zhitou"
- tanx_click_zhitou-subid: "0106143856X2HG2CRT"
- tanx_click_zhitou-accesskey: "9f126ea7-e728-464f-92db-8fe03aed561a"
- tanx_click_zhitou-parse: "com.alimama.quanjingmonitor.mdrillImport.parse.tanx_click_zhitou"
- tanx_click_zhitou-reader: "com.alimama.quanjingmonitor.mdrillImport.reader.TT4Reader"
- tanx_click_zhitou-commitbatch: 200
- tanx_click_zhitou-commitbuffer: 2000
- tanx_click_zhitou-spoutbuffer: 500
- tanx_click_zhitou-boltbuffer: 500
- tanx_click_zhitou-threads: 2
- tanx_click_zhitou-threads_reduce: 12
- tanx_click_zhitou-mode: "merger"
- tanx_click_zhitou-timeoutSpout: 30
- tanx_click_zhitou-timeoutBolt: 20
- tanx_click_zhitou-timeoutCommit: 60
- 
- tanx_click_rt-log: "tanx_rd_log"
- tanx_click_rt-subid: "0106144243FH80E8QP"
- tanx_click_rt-accesskey: "a53f9bb3-26c0-4ba8-9389-13057b9e5d34"
- tanx_click_rt-parse: "com.alimama.quanjingmonitor.mdrillImport.parse.tanx_click_rt"
- tanx_click_rt-reader: "com.alimama.quanjingmonitor.mdrillImport.reader.TT4Reader"
- tanx_click_rt-commitbatch: 200
- tanx_click_rt-commitbuffer: 2000
- tanx_click_rt-spoutbuffer: 500
- tanx_click_rt-boltbuffer: 500
- tanx_click_rt-threads: 2
- tanx_click_rt-threads_reduce: 12
- tanx_click_rt-mode: "merger"
- tanx_click_rt-timeoutSpout: 30
- tanx_click_rt-timeoutBolt: 20
- tanx_click_rt-timeoutCommit: 60
- 
- tanx_user_rt-log: "user_rd"
- tanx_user_rt-subid: "0106144909UBGMF3IB"
- tanx_user_rt-accesskey: "91bb5ad9-dc37-49b1-be75-8e1de52e4407"
- tanx_user_rt-parse: "com.alimama.quanjingmonitor.mdrillImport.parse.tanx_user_rt"
- tanx_user_rt-reader: "com.alimama.quanjingmonitor.mdrillImport.reader.TT4Reader"
- tanx_user_rt-commitbatch: 200
- tanx_user_rt-commitbuffer: 2000
- tanx_user_rt-spoutbuffer: 500
- tanx_user_rt-boltbuffer: 500
- tanx_user_rt-mode: "merger"
- tanx_user_rt-threads: 2
- tanx_user_rt-threads_reduce: 12
- tanx_user_rt-timeoutSpout: 30
- tanx_user_rt-timeoutBolt: 20
- tanx_user_rt-timeoutCommit: 60
- 
-
- 
- #----数据导入命令  ./bluewhale jar ./mdrill.jar com.alimama.mdrillImport.Topology p4p_pv2topology  p4p_pv2 20131229084400 8 1024 ----
- 
- 
- #----如果higo.shards.replication: 2，higo.shards.count: 30的额外配置参考----
- #higo.fixed.shards.1: "0:tiansuan1.kgb.cm4:0,1,2,3,4"
- #higo.fixed.shards.2: "0:tiansuan2.kgb.cm4:5,6,7,8,9"
- #higo.fixed.shards.3: "0:adhoc2.kgb.cm6:10,11,12,13,14"
- #higo.fixed.shards.4: "0:adhoc3.kgb.cm6:15,16,17,18,19"
- #higo.fixed.shards.5: "0:adhoc4.kgb.cm6:20,21,22,23,24"
- #higo.fixed.shards.6: "0:adhoc5.kgb.cm6:25,26,27,28,29,30"
- #higo.fixed.shards.7: "1:adhoc6.kgb.cm6:1,2,3,4,5,6"
- #higo.fixed.shards.8: "1:adhoc7.kgb.cm6:7,8,9,10,11"
- #higo.fixed.shards.9: "1:adhoc8.kgb.cm6:12,13,14,15,16,17"
- #higo.fixed.shards.10: "1:adhoc1.kgb.cm6:18,19,20,21,22,23"
- #higo.fixed.shards.11: "1:adhocbak.kgb.cm6:24,25,26,27,28,29,0"
-
- #----分配给merger server的端口，建议每台机器分配一个merger server----
- higo.merge.ports: "6601,6602,6603,6604,6605,6606,6607,6608,6609,6610"
- #----分配给merger server的端口，建议每台机器分配一个merger server----
- higo.merge.ports: "6601,6602,6603,6604,6605,6606,6607,6608,6609,6610"
- #----启动的merger server的worker数量，建议根据机器数量设定----
- higo.mergeServer.count: 11
- #----分配给实时数据源的端口，该功能在开发中，预留接口----
- higo.realtime.ports: "6501,6502,6503,6504,6505,6506,6507,6508,6509,6510"
- #----启动实时数据源的worker数量,预留接口----
- higo.realtime.count: 0
- #----mdrill同时最多加载的分区个数，取决于内存与数据量----
- higo.cache.partions: 10
- #----通用的worker的jvm参数配置----
- worker.childopts: "-Xms4g -Xmx4g -Xmn2g -XX:SurvivorRatio=3 -XX:PermSize=96m -XX:MaxPermSize=256m -XX:+UseParallelGC -XX:ParallelGCThreads=16 -XX:+UseAdaptiveSizePolicy -XX:+PrintGCDetails -XX:+PrintGCTimeStamps  -Xloggc:%storm.home%/logs/gc-%port%.log "
- #----个别的worker的端口的jvm参数配置，通常用于给merger server单独配置----
- worker.childopts.6601: "-Xms4g -Xmx4g -Xmn2g -XX:SurvivorRatio=3 -XX:PermSize=96m -XX:MaxPermSize=256m -XX:+UseParallelGC -XX:ParallelGCThreads=16 -XX:+UseAdaptiveSizePolicy -XX:+PrintGCDetails -XX:+PrintGCTimeStamps  -Xloggc:%storm.home%/logs/gc-%port%.log "
  #----mdrill的表格列表在hdfs下的路径-----
  higo.table.path: "/group/tbdp-etao-adhoc/p4padhoc/tablelist"
  #----mdrill中启动的solr使用的初始端口号-----
  higo.solr.ports.begin: 51110
  #----mdrill分区方式，目前支持default,day,month,single，default是将一个月分成3个区,single意味着没有分区-----
  higo.partion.type: "month"
+ #----创建索引生成的每个shard的并行----
+ higo.index.parallel: 5
+ #----启动的shard的数，每个shard为一个solr实例，结合cpu个数和内存进行配置，10台48G内存配置60----
+ higo.shards.count: 60
+ 
+ #----基于冗余的ha,设置为1表示没有冗余，如果设置为2，则冗余号位0,1----
+ higo.shards.replication: 1
+ #----启动的merger server的worker数量，建议根据机器数量设定----
+ higo.mergeServer.count: 11
+ #----mdrill同时最多加载的分区个数，取决于内存与数据量----
+ higo.cache.partions: 10
+ #----通用的worker的jvm参数配置----
+ worker.childopts: "-Xms4g -Xmx4g -Xmn2g -XX:SurvivorRatio=3 -XX:PermSize=96m -XX:MaxPermSize=256m -XX:+UseParallelGC -XX:ParallelGCThreads=16 -XX:+UseAdaptiveSizePolicy -XX:+PrintGCDetails -XX:+PrintGCTimeStamps  -Xloggc:%storm.home%/logs/gc-%port%.log "
+ #----个别的worker的端口的jvm参数配置，通常用于给merger server单独配置----
+ worker.childopts.6601: "-Xms4g -Xmx4g -Xmn2g -XX:SurvivorRatio=3 -XX:PermSize=96m -XX:MaxPermSize=256m -XX:+UseParallelGC -XX:ParallelGCThreads=16 -XX:+UseAdaptiveSizePolicy -XX:+PrintGCDetails -XX:+PrintGCTimeStamps  -Xloggc:%storm.home%/logs/gc-%port%.log "
+ worker.childopts.6602: "-Xms4g -Xmx4g -Xmn2g -XX:SurvivorRatio=3 -XX:PermSize=96m -XX:MaxPermSize=256m -XX:+UseParallelGC -XX:ParallelGCThreads=16 -XX:+UseAdaptiveSizePolicy -XX:+PrintGCDetails -XX:+PrintGCTimeStamps  -Xloggc:%storm.home%/logs/gc-%port%.log "
+
+ #----任务分配，注意，原先分布在同一个位置的任务，迁移后还必须分布在一起，比如说acker:0与merger:10分布在一起了，那么迁移后他们还要在一起，为了保险起见，建议同一个端口跑多个任务的，可以像下面acker，heartbeat那样----
+ mdrill.task.ports.adhoc: "6901~6902"
+ mdrill.task.assignment.adhoc:
+     - "####看到这里估计大家都会晕，但是这个是任务调度很重要的地方，出去透透气，回来搞定这里吧####"     
+     - "####注解：merge表示是merger server;shard@0表示是shard的第0个冗余，__acker与heartbeat是内部线程，占用资源很小####"     
+     - "####下面为初始分布，用于同一台机器之间没有宕机的调度####"
+     - "####切记，一个端口只能分配一个shard，千万不要将merge与shard或shard与shard分配到同一个端口里，这会引起计算数据的不准确的####"
+     - "merge:10&shard@0:0~4;tiansuan1.kgb.cm4:6601,6701~6705;6602,6711~6715;6603,6721~6725"
+     - "merge:1&shard@0:5~9;tiansuan2.kgb.cm4:6601,6701~6705;6602,6711~6715;6603,6721~6725"
+     - "merge:2&shard@0:48~53;adhoc1.kgb.cm6:6601,6701~6706;6602,6711~6716;6603,6721~6726"
+     - "merge:3&shard@0:10~14;adhoc2.kgb.cm6:6601,6701~6705;6602,6711~6715;6603,6721~6725"
+     - "merge:4&shard@0:15~19;adhoc3.kgb.cm6:6601,6701~6705;6602,6711~6715;6603,6721~6725"
+     - "merge:5&shard@0:20~24;adhoc4.kgb.cm6:6601,6701~6705;6602,6711~6715;6603,6721~6725"
+     - "merge:6&shard@0:25~30;adhoc5.kgb.cm6:6601,6701~6706;6602,6711~6716;6603,6721~6726"
+     - "merge:7&shard@0:31~36;adhoc6.kgb.cm6:6601,6701~6706;6602,6711~6716;6603,6721~6726"
+     - "merge:8&shard@0:37~41;adhoc7.kgb.cm6:6601,6701~6705;6602,6711~6715;6603,6721~6725"
+     - "merge:9&shard@0:42~47;adhoc8.kgb.cm6:6601,6701~6706;6602,6711~6716;6603,6721~6726"
+     - "shard@0:54~59;adhocbak.kgb.cm6:6701~6706;6711~6716;6721~6726"
+     - ""
+     - "##__acker,heartbeat,merge:0他们共用同一个端口，记住要时时刻刻，他们共享的都是同一个端口,别拆开了##"
+     - "__acker:0;adhocbak.kgb.cm6:6601;6602;6603"
+     - "heartbeat:0;adhocbak.kgb.cm6:6601;6602;6603"
+     - "merge:0;adhocbak.kgb.cm6:6601;6602;6603"
+     - ""
+     - "#######################################################################################################################"
+     - "####如果某台机器宕机了，任务无法在固定的分配都某一台，就需要使用下面的配置，宕机的任务会迁移到新的机器上####"
+     - "####注意这里的端口不要与上面的端口有重叠,某个任务也不要继续分配在上面的机器，因为那台机器已经宕机了####"
+     - "####要注意如果某一台机器宕机，他的任务要均匀的分布到集群其他机器上，不要全部迁移到同一台机器上####"
+     - "merge:2&shard@0:58,59,16,26,38;tiansuan1.kgb.cm4:6604,6721~6725;6605,6731~6735"
+     - "merge:3&shard@0:59,50,17,27,39;tiansuan2.kgb.cm4:6604,6721~6725;6605,6731~6735"
+     - "merge:4&shard@0:1,10,18,28,40,57;adhoc1.kgb.cm6:6604,6721~6726;6605,6731~6736"
+     - "shard@0:2,51,19,29,41;adhoc2.kgb.cm6:6604,6721~6725;6605,6731~6735"
+     - "merge:6&shard@0:3,52,20,30,42;adhoc3.kgb.cm6:6604,6721~6725;6605,6731~6735"
+     - "merge:7&shard@0:4,53,33,31,43;adhoc4.kgb.cm6:6604,6721~6725;6605,6731~6735"
+     - "merge:8&shard@0:6,11,21,32,44,56;adhoc5.kgb.cm6:6604,6721~6726;6605,6731~6736"
+     - "merge:9&shard@0:7,12,22,37,45,55;adhoc6.kgb.cm6:6604,6721~6726;6605,6731~6736"
+     - "merge:5&shard@0:8,13,23,34,46;adhoc7.kgb.cm6:6604,6721~6725;6605,6731~6735"
+     - "merge:10&shard@0:9,14,24,35,54,5,;adhoc8.kgb.cm6:6604,6721~6726;6605,6731~6736"
+     - "merge:1&shard@0:15,25,36,47,0;adhocbak.kgb.cm6:6604,6721~6726;6605,6731~6736"
+     - "##__acker，heartbeat,merge:0他们共用同一个端口，记住要时时刻刻，他们共享的都是同一个端口##"
+     - "__acker:0;adhoc2.kgb.cm6:6604;6605"
+     - "heartbeat:0;adhoc2.kgb.cm6:6604;6605"
+     - "merge:0;adhoc2.kgb.cm6:6604;6605"
+  
+
+  
  #----mdrill个别表的分区设定，这里为rpt_seller_all_m表----
+ 
+ higo.mode.fact_wirelesspv_clickcosteffect1_lbs_adhoc_d: "@nothedate@" 
+ higo.partion.type.fact_p4ppvclick_qrycatpid_d: "day"
  higo.partion.type.rpt_seller_all_m: "month"
  higo.partion.type.r_rpt_cps_luna_item: "default"
  higo.partion.type.fact_wirelesspv_clickcosteffect1_lbs_adhoc_d: "day"
@@ -224,23 +121,174 @@
  higo.mode.ods_allpv_ad_d: "@hdfs@fdt@sigment:15@blocksize:1073741824@iosortmb:256@igDataChange@" 
  higo.index.parallel.ods_allpv_ad_d: 40
  
-#
- #higo.mode.p4p_pv2: "@realtime@"
- #higo.partion.type.p4p_pv2: "month"
- #p4p_pv2-log: "p4p_pv2"
- #p4p_pv2-subid: "1226132513ZWOWEH3B"
- #p4p_pv2-accesskey: "2ac04eb8-b3a4-4fb3-ab89-e8a689501b37"
- #p4p_pv2-parse: "com.alimama.quanjingmonitor.mdrillImport.parse.p4p_pv2"
- #p4p_pv2-reader: "com.alimama.quanjingmonitor.mdrillImport.reader.TT4Reader"
- #p4p_pv2-commitbatch: 1000
- #p4p_pv2-commitbuffer: 1000
- #p4p_pv2-spoutbuffer: 5000
- #p4p_pv2-boltbuffer: 1000
- #p4p_pv2-threads: 11
- #p4p_pv2-mode: "merger"
- #p4p_pv2-timeoutSpout: 60
-# p4p_pv2-timeoutBolt: 30
-# p4p_pv2-timeoutCommit: 120
+ #-------------为个别表单独指定并行-----------------
+ higo.index.parallel.r_rpt_cps_luna_item: 10
+
+
+
+
+
+ ####--实时模式相关配置--####
+ #----binlog记录的位置，默认为local如果hdfs稳定可以写hdfs----
+ higo.realtime.binlog: "local"
+ 
+ #----从tt实时导入到mdrill----
+ higo.partion.type.rpt_quanjing_tanxclick: "default"
+ higo.partion.type.rpt_quanjing_tanxpv: "default"
+ higo.partion.type.s_ods_mm_adzones: "default"
+ higo.mode.s_ods_mm_adzones: "@fieldcontains:status=A@" 
+
+ higo.mode.tanx_pv: "@realtime@cleanPartions:99@"
+ higo.partion.type.tanx_pv: "day"
+ tanx_pv-log: "tanx_pv"
+ tanx_pv-subid: "01061423317TVV8KSN"
+ tanx_pv-accesskey: "604a3330-5c1f-4488-9466-de63f08fe297"
+ tanx_pv-parse: "com.alimama.quanjingmonitor.mdrillImport.parse.tanx_pv"
+ tanx_pv-reader: "com.alimama.quanjingmonitor.mdrillImport.reader.TT4Reader"
+ tanx_pv-commitbatch: 200
+ tanx_pv-commitbuffer: 2000
+ tanx_pv-spoutbuffer: 3000
+ tanx_pv-boltbuffer: 500
+ tanx_pv-boltIntervel: 1000
+ tanx_pv-spoutIntervel: 1000
+ tanx_pv-threads: 32
+ tanx_pv-threads_reduce: 12
+ tanx_pv-mode: "merger"
+ tanx_pv-timeoutSpout: 60
+ tanx_pv-timeoutBolt: 30
+ tanx_pv-timeoutCommit: 100
+ 
+ 
+ higo.mode.tanx_click: "@realtime@cleanPartions:99@"
+ higo.partion.type.tanx_click: "day"
+ 
+ tanx_click_zhitou-log: "tanx_click_zhitou"
+ tanx_click_zhitou-subid: "0106143856X2HG2CRT"
+ tanx_click_zhitou-accesskey: "9f126ea7-e728-464f-92db-8fe03aed561a"
+ tanx_click_zhitou-parse: "com.alimama.quanjingmonitor.mdrillImport.parse.tanx_click_zhitou"
+ tanx_click_zhitou-reader: "com.alimama.quanjingmonitor.mdrillImport.reader.TT4Reader"
+ tanx_click_zhitou-commitbatch: 200
+ tanx_click_zhitou-commitbuffer: 2000
+ tanx_click_zhitou-spoutbuffer: 500
+ tanx_click_zhitou-boltbuffer: 500
+ tanx_click_zhitou-boltIntervel: 10
+ tanx_click_zhitou-spoutIntervel: 100
+ tanx_click_zhitou-threads: 2
+ tanx_click_zhitou-threads_reduce: 12
+ tanx_click_zhitou-mode: "merger"
+ tanx_click_zhitou-timeoutSpout: 30
+ tanx_click_zhitou-timeoutBolt: 20
+ tanx_click_zhitou-timeoutCommit: 60
+ 
+ tanx_click_rt-log: "tanx_rd_log"
+ tanx_click_rt-subid: "0106144243FH80E8QP"
+ tanx_click_rt-accesskey: "a53f9bb3-26c0-4ba8-9389-13057b9e5d34"
+ tanx_click_rt-parse: "com.alimama.quanjingmonitor.mdrillImport.parse.tanx_click_rt"
+ tanx_click_rt-reader: "com.alimama.quanjingmonitor.mdrillImport.reader.TT4Reader"
+ tanx_click_rt-commitbatch: 200
+ tanx_click_rt-commitbuffer: 2000
+ tanx_click_rt-spoutbuffer: 500
+ tanx_click_rt-boltbuffer: 500
+ tanx_click_rt-boltIntervel: 10
+ tanx_click_rt-spoutIntervel: 100
+ tanx_click_rt-threads: 2
+ tanx_click_rt-threads_reduce: 12
+ tanx_click_rt-mode: "merger"
+ tanx_click_rt-timeoutSpout: 30
+ tanx_click_rt-timeoutBolt: 20
+ tanx_click_rt-timeoutCommit: 60
+ 
+ tanx_user_rt-log: "user_rd"
+ tanx_user_rt-subid: "0106144909UBGMF3IB"
+ tanx_user_rt-accesskey: "91bb5ad9-dc37-49b1-be75-8e1de52e4407"
+ tanx_user_rt-parse: "com.alimama.quanjingmonitor.mdrillImport.parse.tanx_user_rt"
+ tanx_user_rt-reader: "com.alimama.quanjingmonitor.mdrillImport.reader.TT4Reader"
+ tanx_user_rt-commitbatch: 200
+ tanx_user_rt-commitbuffer: 2000
+ tanx_user_rt-spoutbuffer: 500
+ tanx_user_rt-boltbuffer: 500
+ tanx_user_rt-boltIntervel: 10
+ tanx_user_rt-spoutIntervel: 100
+ tanx_user_rt-mode: "merger"
+ tanx_user_rt-threads: 2
+ tanx_user_rt-threads_reduce: 12
+ tanx_user_rt-timeoutSpout: 30
+ tanx_user_rt-timeoutBolt: 20
+ tanx_user_rt-timeoutCommit: 60
+ 
+ 
+ 
+ mdrill.task.ports.p4p_pv2topology: "6801~6806"
+ mdrill.task.assignment.p4p_pv2topology:
+     - "random"
+  
+ ####蓝鲸各种心跳间隔配置-一般不需要改动####
+ nimbus.task.timeout.secs: 30
+ task.heartbeat.frequency.secs: 6
+ nimbus.supervisor.timeout.secs: 300
+ supervisor.heartbeat.frequency.secs: 20
+ nimbus.monitor.freq.secs: 60
+ supervisor.worker.timeout.secs: 600
+ supervisor.monitor.frequency.secs: 90
+ worker.heartbeat.frequency.secs: 30
+ 
+ #----每台机器启动的worker进程端口列表，一般请不要改动----
+ supervisor.slots.ports:
+    - 6601
+    - 6602
+    - 6603
+    - 6604
+    - 6605
+    - 6606
+    - 6701
+    - 6702
+    - 6703
+    - 6704
+    - 6705
+    - 6706
+    - 6707
+    - 6708
+    - 6709
+    - 6710
+    - 6711
+    - 6712
+    - 6713
+    - 6714
+    - 6715
+    - 6716
+    - 6717
+    - 6718
+    - 6719
+    - 6720
+    - 6721
+    - 6722
+    - 6723
+    - 6724
+    - 6725
+    - 6726
+    - 6727
+    - 6728
+    - 6729
+    - 6730
+    - 6731
+    - 6732
+    - 6733
+    - 6734
+    - 6735
+    - 6736
+    - 6737
+    - 6738
+    - 6739
+    - 6801
+    - 6802
+    - 6803
+    - 6804
+    - 6805
+    - 6806
+    - 6901
+    - 6902
+    
+
 
 ####以下为adhoc项目专用，跟mdrill无关，不启动UI的话可忽略####
  higo.ui.conf.dir: "/home/taobao/bluewhale/ui16/alimama/adhoc-core/webapp"
